NetBSD Problem Report #36430

From martin@duskware.de  Sat Jun  2 20:27:07 2007
Return-Path: <martin@duskware.de>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id 9429E63B880
	for <gnats-bugs@gnats.NetBSD.org>; Sat,  2 Jun 2007 20:27:07 +0000 (UTC)
Message-Id: <20070602202704.EAC3C33AAD@mail.duskware.de>
Date: Sat,  2 Jun 2007 22:27:04 +0200 (CEST)
From: martin@duskware.de
Reply-To: martin@duskware.de
To: gnats-bugs@NetBSD.org
Subject: wm0 not working at 1000baseT mode
X-Send-Pr-Version: 3.95

>Number:         36430
>Category:       kern
>Synopsis:       wm0 not working at 1000baseT mode
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    msaitoh
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Jun 02 20:30:00 +0000 2007
>Closed-Date:    Thu Aug 09 07:02:49 +0000 2012
>Last-Modified:  Thu Aug 09 07:02:49 +0000 2012
>Originator:     Martin Husemann
>Release:        NetBSD 4.99.20
>Organization:
>Environment:
System: NetBSD night-porter.duskware.de 4.99.20 NetBSD 4.99.20 (PORTER) #10: Sat Jun 2 17:41:08 CEST 2007 martin@night-porter.duskware.de:/usr/src/sys/arch/i386/compile/PORTER i386
Architecture: i386
Machine: i386
>Description:

I have a wm0 that shows up like this:

wm0 at pci1 dev 2 function 0: Intel i82543GC 1000BASE-T Ethernet, rev. 2
wm0: interrupting at ioapic1 pin 5 (irq 7)
wm0: 64-bit 33MHz PCI bus
wm0: 64 word (6 address bits) MicroWire EEPROM
wm0: Ethernet address 00:03:47:25:42:14
makphy0 at wm0 phy 1: Marvell 88E1000 Gigabit PHY, rev. 2
makphy0: 10baseT, 10baseT-FDX, 100baseTX, 100baseTX-FDX, 1000baseT, 1000baseT-FDX, auto

It is connected to a GigE switch, and it works fine in 100baseTX mode.
But in default (1000baseT full-duplex) mode (nor in 1000baseT mode) it does
not seem to be able to send or receive any packets.

ifconfig wm0 says:

wm0: flags=8802<BROADCAST,SIMPLEX,MULTICAST> mtu 1500
	capabilities=2bf00<IP4CSUM_Rx,IP4CSUM_Tx,TCP4CSUM_Rx,TCP4CSUM_Tx,UDP4CSUM_Rx,UDP4CSUM_Tx,TCP6CSUM_Tx,UDP6CSUM_Tx>
	enabled=0
	address: 00:03:47:25:42:14
	media: Ethernet autoselect (1000baseT full-duplex)
	status: active

(no IP added here, but for the tests I did that, of course)

>How-To-Repeat:
Not sure what makes this hardware special.

>Fix:
n/a

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: kern-bug-people->msaitoh
Responsible-Changed-By: msaitoh@NetBSD.org
Responsible-Changed-When: Sun, 29 Mar 2009 07:21:22 +0000
Responsible-Changed-Why:
I could reproduce the bug with my card.


From: SAITOH Masanobu <msaitoh@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/36430 CVS commit: src/sys/dev/pci
Date: Sun, 29 Mar 2009 16:22:18 +0000

 Module Name:	src
 Committed By:	msaitoh
 Date:		Sun Mar 29 16:22:17 UTC 2009

 Modified Files:
 	src/sys/dev/pci: if_wm.c

 Log Message:
 Add workaround for 82543GC.
 We need to force speed and duplex on the MAC equal to what the PHY
 speed and duplex configuration is. Fixes PR#36430.


 To generate a diff of this commit:
 cvs rdiff -u -r1.169 -r1.170 src/sys/dev/pci/if_wm.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Soren Jacobsen <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/36430 CVS commit: [netbsd-5] src/sys/dev/pci
Date: Sun, 3 May 2009 17:58:41 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Sun May  3 17:58:41 UTC 2009

 Modified Files:
 	src/sys/dev/pci [netbsd-5]: if_wm.c

 Log Message:
 Pull up following revision(s) (requested by msaitoh in ticket #630):
 	sys/dev/pci/if_wm.c: revision 1.170
 Add workaround for 82543GC.
 We need to force speed and duplex on the MAC equal to what the PHY
 speed and duplex configuration is. Fixes PR#36430.


 To generate a diff of this commit:
 cvs rdiff -u -r1.162.4.6 -r1.162.4.7 src/sys/dev/pci/if_wm.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Wed, 06 May 2009 23:03:37 +0000
State-Changed-Why:
fixed?


State-Changed-From-To: feedback->open
State-Changed-By: martin@NetBSD.org
State-Changed-When: Thu, 07 May 2009 07:21:42 +0000
State-Changed-Why:
Works better, but seems to drop (or not send) certain packets, still investigating.


From: Soren Jacobsen <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/36430 CVS commit: [netbsd-5-0] src/sys/dev/pci
Date: Sun, 19 Jul 2009 19:48:27 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Sun Jul 19 19:48:26 UTC 2009

 Modified Files:
 	src/sys/dev/pci [netbsd-5-0]: if_wm.c if_wmreg.h

 Log Message:
 Pull up following revision(s) (requested by msaitoh in ticket #862):
 	sys/dev/pci/if_wm.c: revisions 1.168, 1.170, and 1.173 via patch
 	sys/dev/pci/if_wmreg.h: revision 1.27
 Fixes serious three bugs.
 1) On i82563, the em driver says that the ready bit in the MDIC
 register may be incorrectly set. Insert delay(200) like the em driver.
 Fixes PR#41014
 2) Add workaround for 82543GC. We need to force speed and duplex on
 the MAC equal to what the PHY speed and duplex configuration is.
 Fixes PR#36430.
 3) Fix many problems and panic on TBI's cards (includes PR#32009).


 To generate a diff of this commit:
 cvs rdiff -u -r1.162.4.3 -r1.162.4.3.2.1 src/sys/dev/pci/if_wm.c
 cvs rdiff -u -r1.24 -r1.24.26.1 src/sys/dev/pci/if_wmreg.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: martin@NetBSD.org
State-Changed-When: Thu, 09 Aug 2012 07:02:49 +0000
State-Changed-Why:
Other identical cards work - let's assume mine is broken.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.